...
                                <connections>
                                    <action selector="buttonZeroOn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HLa-dX-h9e"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XrD-fI-L1h">
                                <rect key="frame" x="51" y="80" width="311" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="display"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="04G-nx-fHn"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ayf-gN-SRx">
                                <rect key="frame" x="51.999999999999993" y="552.66666666666663" width="77.333333333333314" height="49"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <state key="normal" title="Eval"/>
                                <connections>
                                    <action selector="evalButtonToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kei-ZT-arW"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SEX-zI-EvZ">
                                <rect key="frame" x="284.66666666666669" y="552.66666666666663" width="77.333333333333314" height="49"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <state key="normal" title="CLR"/>
                                <connections>
                                    <action selector="clearButtonToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iUU-G3-T85"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2f2-Zk-HZN">
                                <rect key="frame" x="20" y="668.66666666666663" width="77.333333333333329" height="49.333333333333371"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <state key="normal" title="Enter"/>
                                <connections>
                                    <action selector="enterButtonToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gwW-RR-JA1"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JaI-Pj-bSz">
                                <rect key="frame" x="316.66666666666669" y="668.66666666666663" width="77.333333333333314" height="49.333333333333371"/>
                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                <state key="normal" title="+/-"/>
                                <connections>
                                    <action selector="flipButtonToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eAU-Bk-6wQ"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c67-aN-r4K">
                                <rect key="frame" x="44.999999999999993" y="768" width="77.333333333333314" height="49.333333333333371"/>
...
