//
//  RPN_CalculatorUITests.swift
//  RPN-CalculatorUITests
//
//  Created by Hayden Kua on 10/06/2020.
//  Copyright © 2020 Hayden Kua. All rights reserved.
//

import XCTest

class RPN_CalculatorUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
                XCUIApplication().launch()
            }
        }
    }
    
    
    func testWhenButtonIsClickedTheNumberIsDisplayed() {
        let app = XCUIApplication()
        app.launch()
        
        app.buttons["1"].tap()
        app.buttons["3"].tap()
        app.buttons["5"].tap()
        
        let expected = "135"
        let actual = app.staticTexts["display"].label
        XCTAssertEqual(actual, expected)
    }
    
    func testWhenEvalIsClickedExpressionIsCalculated() {
        let app = XCUIApplication()
        app.launch()
        
        app.buttons["3"].tap()
        app.buttons["Enter"].tap()
        app.buttons["5"].tap()
        app.buttons["x"].tap()
        app.buttons["4"].tap()
        app.buttons["Enter"].tap()
        app.buttons["4"].tap()
        app.buttons["x"].tap()
        app.buttons["-"].tap()
        app.buttons["Eval"].tap()
        
        let expected = "-1"
        let actual = app.staticTexts["display"].label
        XCTAssertEqual(actual, expected)
    }
    
    func testWhenClearIsClickedNumberIsWiped() {
        let app = XCUIApplication()
        app.launch()
        
        app.buttons["1"].tap()
        app.buttons["CLR"].tap()
        
        let expected = " "
        let actual = app.staticTexts["display"].label
        XCTAssertEqual(actual, expected)
    }
    
    func testWhenFlipButtonIsPressedNumberTurnsNegativeOrPositive() {
        let app = XCUIApplication()
        app.launch()
        
        app.buttons["5"].tap()
        app.buttons["+/-"].tap()
        
        let expected = "-5"
        let actual = app.staticTexts["display"].label
        XCTAssertEqual(actual, expected)
        
    }
}
